[package]
name = "get-solana-transaction-fees"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
log = "0.4.22"
mongodb = "3.1.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
solana-client = "2.1.7"
solana-sdk = "2.1.7"
solana-transaction-status = "2.1.7"
tokio = { version = "1.42.0", features = ["macros"] }
